--- a/src/locale/messages.fr.json
+++ b/src/locale/messages.fr.json
@@ -550,7 +550,7 @@
   "home.section.who.li4.label": "{$START_TAG_STRONG}Marketeurs{$CLOSE_TAG_STRONG} – tester des campagnes et newsletters sans risquer la réputation de leur boîte principale.",
   "home.section.who.li5.label": "{$START_TAG_STRONG}Utilisateurs quotidiens{$CLOSE_TAG_STRONG} – garder Gmail, Outlook ou Yahoo propres et centrés sur un usage personnel.",
   "home.section.who.li6.label": "{$START_TAG_STRONG}Gamers{$CLOSE_TAG_STRONG} – vérifier des comptes sur Steam, Epic Games et Rockstar sans exposer leur adresse privée.",
-  "home.section.who.li7.label": "{$START_TAG_STRONG}Utilisateurs de réseaux sociaux{$CLOSE_TAG_STRONG} – créer des comptes sécurisés sur Instagram, Discord, Reddit, TikTok ou Telegram.",
+  "home.section.who.li7.label": "{$START_TAG_STRONG}Utilisateurs de réseaux sociaux{$CLOSE_TAG_STRONG} – créer des comptes sécurisés sur Facebook, Instagram, Discord, Reddit, TikTok ou Telegram.",
   "home.section.who.li8.label": "{$START_TAG_STRONG}Freelances{$CLOSE_TAG_STRONG} – gérer les inscriptions clients, essais de projets et outils avec des boîtes temporaires.",
   "home.section.who.li9.label": "{$START_TAG_STRONG}Personnes axées sur la confidentialité{$CLOSE_TAG_STRONG} – rester anonymes, protéger leurs données et profiter d’une communication sans spam.",
   "home.section.who.outro.label": "Basé sur plus de 500 000 utilisateurs de TempMail4U dans le monde · Mis à jour en septembre 2025",
