--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -313,7 +313,7 @@
     "home.section.who.li4.label": "{$START_TAG_STRONG}Marketers{$CLOSE_TAG_STRONG} – test campaigns and newsletters without risking their main inbox reputation. ",
     "home.section.who.li5.label": "{$START_TAG_STRONG}Everyday users{$CLOSE_TAG_STRONG} – keep Gmail, Outlook, or Yahoo accounts clean and focused on personal use. ",
     "home.section.who.li6.label": "{$START_TAG_STRONG}Gamers{$CLOSE_TAG_STRONG} – verify accounts on Steam, Epic Games, and Rockstar without exposing private emails. ",
-    "home.section.who.li7.label": "{$START_TAG_STRONG}Social media users{$CLOSE_TAG_STRONG} – create safe accounts on Instagram, Discord, Reddit, TikTok, or Telegram. ",
+    "home.section.who.li7.label": "{$START_TAG_STRONG}Social media users{$CLOSE_TAG_STRONG} – create safe accounts on Facebook, Instagram, Discord, Reddit, TikTok, or Telegram. ",
     "home.section.who.li8.label": "{$START_TAG_STRONG}Freelancers{$CLOSE_TAG_STRONG} – manage client signups, project trials, and tools with disposable inboxes. ",
     "home.section.who.li9.label": "{$START_TAG_STRONG}Privacy-focused users{$CLOSE_TAG_STRONG} – stay anonymous, protect data, and enjoy spam-free communication. ",
     "home.section.who.outro.label": " Based on 500,000+ TempMail4U users worldwide · Updated September 2025 ",
