--- a/src/locale/messages.ru.json
+++ b/src/locale/messages.ru.json
@@ -542,7 +542,7 @@
   "home.section.who.li4.label": "{$START_TAG_STRONG}Маркетологи{$CLOSE_TAG_STRONG} – тестировать кампании и рассылки без риска для репутации основного ящика.",
   "home.section.who.li5.label": "{$START_TAG_STRONG}Обычные пользователи{$CLOSE_TAG_STRONG} – держать Gmail, Outlook или Yahoo чистыми и использовать только для личных целей.",
   "home.section.who.li6.label": "{$START_TAG_STRONG}Геймеры{$CLOSE_TAG_STRONG} – подтверждать аккаунты в Steam, Epic Games и Rockstar без раскрытия личной почты.",
-  "home.section.who.li7.label": "{$START_TAG_STRONG}Пользователи соцсетей{$CLOSE_TAG_STRONG} – безопасно создавать аккаунты в Instagram, Discord, Reddit, TikTok или Telegram.",
+  "home.section.who.li7.label": "{$START_TAG_STRONG}Пользователи соцсетей{$CLOSE_TAG_STRONG} – безопасно создавать аккаунты в Facebook, Instagram, Discord, Reddit, TikTok или Telegram.",
   "home.section.who.li8.label": "{$START_TAG_STRONG}Фрилансеры{$CLOSE_TAG_STRONG} – управлять клиентскими регистрациями, пробными проектами и сервисами через одноразовые ящики.",
   "home.section.who.li9.label": "{$START_TAG_STRONG}Пользователи, заботящиеся о приватности{$CLOSE_TAG_STRONG} – оставаться анонимными, защищать данные и пользоваться почтой без спама.",
   "home.section.who.outro.label": "Основано на данных более 500 000 пользователей TempMail4U по всему миру · Обновлено в сентябре 2025",
