--- a/src/locale/messages.fr.json
+++ b/src/locale/messages.fr.json
@@ -16,7 +16,7 @@
     "nav.contact": "Contact",
     "header.menu.toggle": "Menu",
     "mainTempMail.title": " Votre adresse e-mail temporaire ",
-    "mainTempMail.newEmail": "Nouvel email",
+    "mainTempMail.newEmail": "Nouveau",
     "mainTempMail.recentEmail": " Emails récents ",
     "mainTempMail.noRecentEmails": " Aucun email récent trouvé ",
     "mainTempMail.emailActive": " Actif ",
@@ -27,10 +27,10 @@
     "mainTempMail.copy": "Copier",
     "mainTempMail.savedMobile": "Enregistré",
     "mainTempMail.saveMobile": "Enregistrer",
-    "mainTempMail.newEmailMobile": "Nouvel email",
+    "mainTempMail.newEmailMobile": "Nouveau",
     "mainTempMail.inbox": " Votre boîte mail temporaire ",
     "mainTempMail.inbox2": " Votre boîte ",
-    "mainTempMail.autoRefresh": "Actualisation automatique dans {$INTERPOLATION}s",
+    "mainTempMail.autoRefresh": "Rafraîchit dans {$INTERPOLATION}s",
     "mainTempMail.waitingForMessages": " En attente de messages pour ",
     "mainTempMail.checkAgain": "Vérifier à nouveau",
     "newEmailModal.yourEmailHistory": "Historique de vos adresses",
@@ -52,9 +52,9 @@
     "newEmailModal.use": " Utiliser ",
     "newEmailModal.delete": " Supprimer ",
     "quickEmail.title": "Votre adresse e-mail rapide",
-    "quickEmail.newEmail": "Nouvel email",
+    "quickEmail.newEmail": "Nouveau",
     "quickEmail.expired": "Adresse expirée",
-    "quickEmail.generateNewEmail": " Générer un nouvel email ",
+    "quickEmail.generateNewEmail": " Générer un Nouveau",
     "quickEmail.generating": "Génération d’une nouvelle adresse...",
     "quickEmail.copiedMessage": "copié",
     "quickEmail.copyMessage1": "copier",
@@ -65,7 +65,7 @@
     "quickEmail.instruction3": "• Cliquez sur « Réinitialiser » pour revenir à {$INTERPOLATION} minutes",
     "quickEmail.instruction4": "• Consultez la boîte ci-dessous pour les e-mails reçus",
     "quickEmail.inbox": "Votre boîte mail temporaire",
-    "quickEmail.autoRefresh": "Actualisation automatique dans {$INTERPOLATION}s",
+    "quickEmail.autoRefresh": "Rafraîchit dans {$INTERPOLATION}s",
     "quickEmail.expiredInbox": "Adresse expirée. Générez une nouvelle adresse pour voir la boîte.",
     "quickEmail.waitingForMessages": "En attente de messages pour {$START_TAG_SPAN}{$INTERPOLATION}{$CLOSE_TAG_SPAN}",
     "quickEmail.featuresTitle": "Fonctionnalités du mail rapide",
