--- a/src/locale/messages.ar.json
+++ b/src/locale/messages.ar.json
@@ -78,8 +78,9 @@
     "saveSuccess.sentToLabel": "أُرسل إلى:",
     "common.close": " إغلاق ",
     "saveSuccess.emailLink": " رابط البريد ",
-    "email10minTitle": " بريد مؤقت لمدة 10 دقائق – صندوق واردات مجاني دون تسجيل ",
-    "email10minSubtitle": " أنشئ فوراً {$START_TAG_STRONG}عنوان بريد مؤقت لمدة 10 دقائق{$CLOSE_TAG_STRONG}. مثالي لعمليات التحقق عبر البريد وOTPs والتسجيلات المجهولة دون كشف بريدك الشخصي. ",
+    "email10minTitle": "بريد مؤقت 10 دقائق – صندوق وارد مجاني دون تسجيل",
+"email10minSubtitle": "أنشئ فوراً {$START_TAG_STRONG}بريد مؤقت 10 دقائق{$CLOSE_TAG_STRONG}. مثالي لعمليات التحقق عبر البريد وOTPs والتسجيلات المجهولة دون كشف بريدك الشخصي."
+,
     "whatIs10minEmail": "ما هو البريد المؤقت لمدة 10 دقائق؟",
     "10minEmailDesc1": " {$START_TAG_STRONG}البريد المؤقت لمدة 10 دقائق{$CLOSE_TAG_STRONG} هو صندوق واردات مجهول يتلاشى بعد 10 دقائق فقط. مثالي للتسجيلات لمرة واحدة، تأكيدات البريد، تنزيل الملفات، وتجنب الرسائل المزعجة. ",
     "10minEmailDesc2": " لا حاجة للتسجيل أو تقديم بيانات شخصية، ما يجعله الطريقة الأكثر أماناً للحفاظ على خصوصيتك على الإنترنت. استخدمه كبريد مؤقت كلما احتجت صندوقاً آمناً وسريعاً. ",
@@ -153,8 +154,9 @@
 "seo.email10min.faq.q9": "هل هو أفضل من استخدام بريد وهمي؟",
 "seo.email10min.faq.a9": "نعم! على عكس البريد الوهمي، هذه الخدمة توفر صندوق بريد حقيقي وفعال لتلقي الرسائل بشكل شرعي."
 ,
-     "seo.email10min.title": "بريد مؤقت لمدة 10 دقائق - صندوق واردات مجاني | TempMail4u",
-    "seo.email10min.description": "احصل على بريد مؤقت مجاني لمدة 10 دقائق لعمليات التحقق الفورية. دون تسجيل. احمِ خصوصيتك بصندوق واردات ذاتي الإتلاف.",
+"seo.email10min.title": "بريد مؤقت 10 دقائق - صندوق وارد مجاني | TempMail4u",
+"seo.email10min.description": "احصل على بريد مؤقت 10 دقائق لعمليات التحقق الفورية. دون تسجيل. احمِ خصوصيتك بصندوق وارد ذاتي الإتلاف."
+,
     "seo.email10min.keywords": "بريد 10 دقائق, بريد مؤقت, صندوق مؤقت, بريد حارق, تحقق بالبريد, بريد OTP, حماية الخصوصية, منع الرسائل المزعجة, بريد مجهول, بريد سريع",
     "email20min.title": " بريد مؤقت لمدة 20 دقيقة – صندوق واردات مجاني ",
     "email20min.subtitle": " أنشئ فوراً {$START_TAG_STRONG}عنوان بريد مؤقت لمدة 20 دقيقة{$CLOSE_TAG_STRONG}، مثالي لعمليات التسجيل وOTPs والتحققات متعددة الخطوات التي تحتاج وقتاً أطول قليلاً. بلا تسجيل، بلا إزعاج، مجرد صندوق خاص وآمن يعمل حين تحتاجه. ",
