--- a/src/locale/messages.ar.json
+++ b/src/locale/messages.ar.json
@@ -565,7 +565,10 @@
   "home.section.faq.social.a11.label": "نعم، TempMail4U يعمل لإنشاء وتوثيق الحسابات على إنستغرام، فيسبوك، سناب شات، تويتر X، ديسكورد، ريديت، تيك توك، تيليجرام، وKick. كما يدعم خدمات البث مثل نتفليكس وأمازون برايم، ومنصات الألعاب مثل Steam وEpic Games وRockstar. يمكنك استلام OTP ورموز التحقق فورًا مع الحفاظ على خصوصية بريدك الشخصي.",
   "home.section.faq.a6.label": "لا. هذه الصناديق مخصصة للاستقبال فقط. تم تصميمها للتسجيلات، التحقق، والاستخدام السريع لمرة واحدة، وليست للإرسال أو التواصل طويل الأمد.",
   "home.section.faq.a9.label": "نعم. نوفر {$START_TAG_STRONG}بريد مؤقت 10 دقائق{$CLOSE_TAG_STRONG} بالإضافة إلى نسخ 20 دقيقة و30 دقيقة للاستخدام السريع والمؤقت. وهي مثالية للتسجيلات القصيرة أو رموز التحقق لمرة واحدة.",
-  "privacy.lastUpdated": "آخر تحديث: سبتمبر 2025"
+  "privacy.lastUpdated": "آخر تحديث: سبتمبر 2025",
+  "home.section.faq.equivalence.q.label": "هل البريد الوهمي هو نفسه البريد المؤقت؟",
+"home.section.faq.equivalence.a.label": "في معظم الحالات نعم. يستخدم الناس مصطلح <strong>البريد الوهمي</strong> للإشارة إلى <strong>البريد المؤقت أو القابل للتخلص</strong> الذي يستقبل الرسائل ورموز التحقق دون كشف بريدهم الحقيقي."
+
 
   }
 }
