--- a/src/locale/messages.ru.json
+++ b/src/locale/messages.ru.json
@@ -552,7 +552,10 @@
   "home.section.faq.social.a11.label": "Да, TempMail4U подходит для создания и подтверждения аккаунтов в Instagram, Facebook, Snapchat, Twitter X, Discord, Reddit, TikTok, Telegram и Kick. Также работает с сервисами потокового видео, такими как Netflix и Amazon Prime, и игровыми платформами Steam, Epic Games и Rockstar. Вы можете получать OTP и коды подтверждения мгновенно, сохраняя конфиденциальность личной почты.",
   "home.section.faq.a6.label": "Нет. Эти ящики предназначены только для приёма писем. Они созданы для регистраций, подтверждений и быстрого одноразового использования, но не для отправки или долгосрочной переписки.",
   "home.section.faq.a9.label": "Да. Мы предоставляем {$START_TAG_STRONG}10-минутную временную почту{$CLOSE_TAG_STRONG}, а также варианты на 20 и 30 минут для быстрого и одноразового использования. Это удобно для коротких регистраций или получения кодов подтверждения.",
-  "privacy.lastUpdated": "Последнее обновление: сентябрь 2025"
+  "privacy.lastUpdated": "Последнее обновление: сентябрь 2025",
+  "home.section.faq.equivalence.q.label": "Является ли фейковая почта тем же самым, что и временная почта?",
+"home.section.faq.equivalence.a.label": "В большинстве случаев да. Люди используют термин <strong>фейковая почта</strong>, чтобы обозначить <strong>временную или одноразовую почту</strong>, которая получает сообщения и коды OTP, не раскрывая их настоящий почтовый ящик."
+
 
   }
 }
