--- a/src/locale/messages.ar.json
+++ b/src/locale/messages.ar.json
@@ -224,7 +224,7 @@
     "seo.email30min.description": "بريد مؤقت مجاني لمدة 30 دقيقة لعمليات التسجيل الآمنة والتحقق متعدد الخطوات والاستخدام المهني. وصول فوري دون تسجيل.",
     "seo.email30min.keywords": "بريد 30 دقيقة, بريد مؤقت ممتد, صندوق مؤقت, تمب ميل, بريد حارق, تحقق بريد للأعمال, بريد مؤقت طويل, 30 دقيقة",
     "home.section.hero.title.label": " خدمة البريد الإلكتروني المؤقت المجانية ",
-    "home.section.hero.subtitle.label": " أنشئ فوراً {$START_TAG_STRONG}بريداً مؤقتاً{$CLOSE_TAG_STRONG} مع {$START_TAG_STRONG}TempMail4U{$CLOSE_TAG_STRONG}. احصل على {$START_EMPHASISED_TEXT}عنوان بريد مؤقت{$CLOSE_EMPHASISED_TEXT} يحمي خصوصيتك، بلا تسجيل، بلا رسائل مزعجة، بلا مخاطرة. استخدمه للتسجيل السريع بالمواقع، اختبار التطبيقات، التنزيلات، أو كلما احتجت {$START_EMPHASISED_TEXT}بريداً حارقاً{$CLOSE_EMPHASISED_TEXT} يحافظ على نظافة بريدك الحقيقي. ",
+    "home.section.hero.subtitle.label": "أنشئ عناوين بريد إلكتروني وهمية مؤقتة، وأدر صندوق بريدك المؤقت",
     "home.section.why.title.label": " لماذا تحتاج إلى تمب ميل؟ ",
     "home.section.why.intro.label": " مشاركة بريدك الحقيقي في كل مكان أمر محفوف بالمخاطر. غالباً ما تُباع العناوين للمسوقين، وتستهدفها الهجمات عند تسرب قواعد البيانات، وتغرق الرسائل المزعجة صندوقك. {$START_TAG_STRONG}استخدام بريد مؤقت يمنحك السيطرة.{$CLOSE_TAG_STRONG}",
     "home.section.why.li1.label": "احمِ بريدك الشخصي من الرسائل المزعجة والإعلانات",
