--- a/src/locale/messages.ar.json
+++ b/src/locale/messages.ar.json
@@ -568,6 +568,9 @@
   "privacy.lastUpdated": "آخر تحديث: سبتمبر 2025",
   "home.section.faq.equivalence.q.label": "هل البريد الوهمي هو نفسه البريد المؤقت؟",
 "home.section.faq.equivalence.a.label": "في معظم الحالات نعم. يستخدم الناس مصطلح <strong>البريد الوهمي</strong> للإشارة إلى <strong>البريد المؤقت أو القابل للتخلص</strong> الذي يستقبل الرسائل ورموز التحقق دون كشف بريدهم الحقيقي."
+,
+ "faq10Question": "هل يمكنني استخدام بريد مؤقت لمدة 10 دقائق للأعمال؟",
+  "faq10Answer": "نعم، يمكنك استخدام <strong>بريد أعمال مؤقت لمدة 10 دقائق</strong> للتسجيلات السريعة، الاشتراكات التجريبية، أو عمليات التحقق لمرة واحدة. ومع ذلك، لا يُنصح باستخدامه للتواصل طويل المدى أو البيانات الحساسة لأنه يُحذف بعد 10 دقائق."
 
 
   }
