--- a/src/locale/messages.ru.json
+++ b/src/locale/messages.ru.json
@@ -555,6 +555,9 @@
   "privacy.lastUpdated": "Последнее обновление: сентябрь 2025",
   "home.section.faq.equivalence.q.label": "Является ли фейковая почта тем же самым, что и временная почта?",
 "home.section.faq.equivalence.a.label": "В большинстве случаев да. Люди используют термин <strong>фейковая почта</strong>, чтобы обозначить <strong>временную или одноразовую почту</strong>, которая получает сообщения и коды OTP, не раскрывая их настоящий почтовый ящик."
+,
+  "faq10Question": "Могу ли я использовать 10-минутный адрес для бизнеса?",
+  "faq10Answer": "Да, вы можете использовать <strong>10-минутный бизнес-email</strong> для быстрых регистраций, пробных подписок или одноразовых подтверждений. Однако он не подходит для длительной переписки или конфиденциальных данных, так как почтовый ящик удаляется через 10 минут."
 
 
   }
