--- a/src/locale/messages.ar.json
+++ b/src/locale/messages.ar.json
@@ -571,6 +571,22 @@
 ,
  "faq10Question": "هل يمكنني استخدام بريد مؤقت لمدة 10 دقائق للأعمال؟",
   "faq10Answer": "نعم، يمكنك استخدام <strong>بريد أعمال مؤقت لمدة 10 دقائق</strong> للتسجيلات السريعة، الاشتراكات التجريبية، أو عمليات التحقق لمرة واحدة. ومع ذلك، لا يُنصح باستخدامه للتواصل طويل المدى أو البيانات الحساسة لأنه يُحذف بعد 10 دقائق."
+,
+"breadcrumb.home": "الصفحة الرئيسية",
+"breadcrumb.services": "الخدمات",
+"breadcrumb.contact": "اتصل بنا",
+"breadcrumb.about": "معلومات عنا",
+"breadcrumb.10min": "بريد مؤقت لمدة 10 دقائق",
+"nav.howItWorks": "كيف يعمل",
+"services.hero.cta": "ابدأ الآن",
+"about.hero.cta": "جرّب تمب ميل الآن",
+"mainTempMail.copyToastMessage": "تم نسخ البريد الإلكتروني إلى الحافظة",
+"quickEmail.resetTimer": "إعادة التعيين",
+"quickEmail.timerExpired": "انتهى الوقت",
+"quickEmail.emailExpiredMessage": "أنشئ بريدًا جديدًا للمتابعة",
+"seo.howItWorks.title": "كيف يعمل تمب ميل - دليل خطوة بخطوة",
+"seo.howItWorks.description": "تعرف على كيفية استخدام تمب ميل في خمس خطوات بسيطة مع لقطات شاشة توضح كيفية إنشاء ونسخ وإدارة صناديق البريد المؤقتة.",
+"seo.howItWorks.keywords": "كيف يعمل تمب ميل، شرح البريد المؤقت، دليل تمب ميل، خطوات البريد المؤقت"
 
 
   }
