--- a/src/locale/messages.ru.json
+++ b/src/locale/messages.ru.json
@@ -558,7 +558,22 @@
 ,
   "faq10Question": "Могу ли я использовать 10-минутный адрес для бизнеса?",
   "faq10Answer": "Да, вы можете использовать <strong>10-минутный бизнес-email</strong> для быстрых регистраций, пробных подписок или одноразовых подтверждений. Однако он не подходит для длительной переписки или конфиденциальных данных, так как почтовый ящик удаляется через 10 минут."
-
+,
+"breadcrumb.home": "Главная",
+"breadcrumb.services": "Услуги",
+"breadcrumb.contact": "Контакты",
+"breadcrumb.about": "О нас",
+"breadcrumb.10min": "10-минутная почта",
+"nav.howItWorks": "Как это работает",
+"services.hero.cta": "Начать сейчас",
+"about.hero.cta": "Попробовать TempMail",
+"mainTempMail.copyToastMessage": "Электронная почта скопирована в буфер обмена",
+"quickEmail.resetTimer": "Сбросить",
+"quickEmail.timerExpired": "Истекло",
+"quickEmail.emailExpiredMessage": "Создайте новый адрес электронной почты, чтобы продолжить",
+"seo.howItWorks.title": "Как работает TempMail — пошаговое руководство",
+"seo.howItWorks.description": "Узнайте, как использовать TempMail за пять простых шагов с иллюстрациями, которые показывают, как создавать, копировать и управлять временными почтовыми ящиками.",
+"seo.howItWorks.keywords": "как работает временная почта, руководство TempMail, временная почта, одноразовый адрес"
 
   }
 }
