--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -501,26 +501,50 @@
     "savedEmail.daysRemaining": "{$INTERPOLATION} days remaining",
     "savedEmail.error.title": "Access Link Invalid",
     "savedEmail.error.generateNew": " Generate New Email ",
-    "services.title": " Our Temporary Email Services ",
-    "services.subtitle": " Protect your privacy with a free {$START_TAG_STRONG}temp mail{$CLOSE_TAG_STRONG} solution. Whether you need a quick {$START_TAG_STRONG}one time email{$CLOSE_TAG_STRONG} or a longer-lasting {$START_TAG_STRONG}temporary inbox{$CLOSE_TAG_STRONG}, TempMail4U has you covered. ",
-    "services.list.title": " Choose Your Disposable Inbox ",
-    "services.card.10.title": " 10-Minute Mail ",
-    "services.card.10.desc": " A short-lived {$START_TAG_STRONG}one time email{$CLOSE_TAG_STRONG} for instant verifications. ",
-    "services.card.20.title": " 20-Minute Mail ",
-    "services.card.20.desc": " Extra time for multi-step signups and delayed codes. ",
-    "services.card.30.title": " 30-Minute Mail ",
-    "services.card.30.desc": " A longer {$START_TAG_STRONG}temporary inbox{$CLOSE_TAG_STRONG} for apps and free trials. ",
-    "services.card.7.title": " 7-Day Saved Inbox ",
-    "services.card.7.desc": " Keep your {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} active for up to a week - perfect for projects and ongoing tasks. ",
-    "services.card.7.note": " Save your unique link to revisit anytime within 7 days. ",
-    "services.features.title": " Why Use TempMail4U? ",
-    "services.features.li1": " Instant {$START_TAG_STRONG}temp mail{$CLOSE_TAG_STRONG} address - no signup needed ",
-    "services.features.li2": " Privacy-first: no tracking, no spam, no ads ",
-    "services.features.li3": " Clean, fast, mobile-friendly interface ",
-    "services.features.li4": " Flexible durations: 10m, 20m, 30m, and 7-day inbox ",
-    "services.cta.title": " Start With Your Free Disposable Inbox ",
-    "services.cta.desc": " Create a {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} instantly and keep your personal inbox safe from spam. ",
-    "services.cta.button": " Generate Temp Mail Now ",
+    "services.title": "Temporary Email Services",
+    "services.subtitle": "Choose from our range of free temporary email solutions. Protect your privacy with disposable inboxes for every need.",
+    "services.hero.cta": "Get Started Free",
+    "services.list.title": "Choose Your Temporary Inbox",
+    "services.list.subtitle": "Select the perfect disposable email duration for your specific needs",
+    "services.card.10.title": "10-Minute Mail",
+    "services.card.10.badge": "Quick",
+    "services.card.10.desc": "Perfect for instant OTPs and quick verifications. Get your one-time email instantly.",
+    "services.card.10.ideal": "Ideal for: Quick signups & OTPs",
+    "services.card.20.title": "20-Minute Mail",
+    "services.card.20.badge": "Standard",
+    "services.card.20.desc": "Extra time for multi-step signups, delayed confirmations, and onboarding flows.",
+    "services.card.20.ideal": "Ideal for: Website registrations",
+    "services.card.30.title": "30-Minute Mail",
+    "services.card.30.badge": "Extended",
+    "services.card.30.desc": "Extended temporary inbox for app testing, free trials, and downloads.",
+    "services.card.30.ideal": "Ideal for: App testing & trials",
+    "services.card.7.title": "7-Day Inbox",
+    "services.card.7.badge": "Most Flexible",
+    "services.card.7.desc": "Keep your temporary email active for up to a week. Perfect for projects, trials, and ongoing collaborations.",
+    "services.card.7.note": "Save your unique link to revisit anytime within 7 days.",
+    "services.card.7.ideal": "Ideal for: Projects & extended trials",
+    "services.useCases.title": "Where to Use Temp Mail",
+    "services.useCases.subtitle": "Our temporary emails work seamlessly across various platforms and services",
+    "services.useCases.social": "Social Media",
+    "services.useCases.apps": "App Testing",
+    "services.useCases.shopping": "Online Shopping",
+    "services.useCases.gaming": "Gaming Platforms",
+    "services.useCases.downloads": "File Downloads",
+    "services.useCases.forums": "Forums & Groups",
+    "services.features.title": "Why Choose TempMail4U",
+    "services.features.subtitle": "Experience the best temporary email service with privacy-focused features",
+    "services.features.instant.title": "Instant Access",
+    "services.features.instant.desc": "Get your temporary email immediately with no signup or registration required",
+    "services.features.privacy.title": "Complete Privacy",
+    "services.features.privacy.desc": "No tracking, no spam, no ads. Your privacy is our priority",
+    "services.features.mobile.title": "Mobile Optimized",
+    "services.features.mobile.desc": "Clean, fast interface that works perfectly on all devices",
+    "services.features.free.title": "100% Free",
+    "services.features.free.desc": "All features available for free with no hidden costs or limitations",
+    "services.cta.title": "Ready to Get Started?",
+    "services.cta.desc": "Join thousands of users who protect their privacy with TempMail4U. Create your free temporary email in seconds.",
+    "services.cta.button": "Generate Temp Mail Now",
+    "services.cta.note": "No registration required • Instant access • Privacy first",
     "seo.services.title": "Temporary Email Services - Disposable Inboxes, Custom Aliases, OTP Support",
     "seo.services.description": "Use TempMail4u for quick signups, app testing, and OTP verifications. Create disposable inboxes instantly and keep your real email safe.",
     "seo.services.keywords": "temporary email services, disposable inbox, burner email, otp email, test email, spam protection",
@@ -547,7 +571,6 @@
     "seo.terms.description": "Read the Terms & Conditions for using TempMail4U's services, including one time email, temporary email, temp mail, and temporary inbox options.",
     "seo.terms.keywords": "terms and conditions, temp mail terms, temporary email policy, one time email rules, temporary inbox conditions",
     "home.section.faq.equivalence.q.label": "Is fake email the same as temporary email?",
-"home.section.faq.equivalence.a.label": "In most cases yes. People use the term <strong>fake email</strong> to mean a <strong>temporary or disposable email</strong> that receives messages and OTPs without exposing their real inbox."
-
+    "home.section.faq.equivalence.a.label": "In most cases yes. People use the term <strong>fake email</strong> to mean a <strong>temporary or disposable email</strong> that receives messages and OTPs without exposing their real inbox."
   }
 }
